Temporarily attempt to fix alignment of search icon

--- a/src/components/NavDrawer/NavDrawer.module.scss
+++ b/src/components/NavDrawer/NavDrawer.module.scss
@@ -63,6 +63,7 @@
 		display: flex;
 		align-items: flex-start;
 		gap: 0.2rem;
+		background-color: red;
 
 		input {
 			font-size: 1rem;
@@ -75,11 +76,12 @@
 			border: #007dd8 2px solid;
 			border-radius: 0.2rem;
 		}
+
 		.icon {
 			color: white;
 			width: 30px;
 			height: fit-content;
-			background-color: red;
+			align-self: flex-start;
 		}
 		.icon:hover {
 			cursor: pointer;
